# health-centre-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: aeab1fcc170f_add_stage_3_master_data_tables.py  d7a2fb41812b_add_auth_tables_users_otps_refresh_.py
app/: main.py
app/api/: deps.py  system.py
app/core/: config.py  exceptions.py  geo.py  logging.py  security.py
app/db/: base.py  redis.py  session.py
app/middleware/: error_handler.py  request_id.py  request_logging.py  security_headers.py
app/models/: block.py  department.py  district.py  health_centre.py  otp.py  refresh_token.py  room.py  session.py  specialization.py  staff_assignment.py  user.py  village.py  ward.py
app/schemas/: auth.py  block.py  common.py  department.py  district.py  health_centre.py  lookup.py  room.py  specialization.py  staff_assignment.py  user.py  village.py  ward.py
app/services/: auth_service.py  block_service.py  department_service.py  district_service.py  health_centre_service.py  mock_otp_service.py  otp_rate_limit.py  otp_service.py  refresh_token_service.py  room_service.py  session_service.py  specialization_service.py  staff_assignment_service.py  user_service.py  village_service.py  ward_service.py
tests/: conftest.py
tests/api/: test_auth_otp.py  test_auth_sessions.py  test_auth_tokens.py  test_districts.py  test_health.py  test_health_centres.py  test_master_data_smoke.py  test_staff_assignment.py
tests/services/: test_otp_generation.py  (+1 more)
(+13 files in other folders)
