[project]
name = "swasthyasetu-backend"
version = "0.1.0"
description = "SwasthyaSetu FastAPI backend"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI's Depends()-in-default-arg is the intended idiom

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
